<resources>
    <string name="app_name">AndroidTeacher</string>
    <string name="test_welcome_header">Welcome on Test page</string>
    <string name="test_welcome_description">Check your knowledge of Android</string>
    <string name="test">Test</string>
    <string name="aboutApp">Info about App</string>
    <string name="start_the_app">Start</string>
    <string name="start_test">start TEST</string>
    <string name="your_result">Your result is:</string>
    <string name="try_again">Try again</string>
    <string name="answer">Answer</string>
    <string name="result">Result</string>
    <string name="article_title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_on_main_page">Welcome on Main page</string>
    <string name="check_meaning">Check meaning</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s!</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Add article</string>
    <string name="instruction">This is an app to help students learn Android</string>
    <string name="description">Description</string>
    <string name="add_article">Add article</string>
    <string name="your_tasks">Your tasks:</string>
    <string name="delete_all">delete all</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="done">done</string>
    <string name="congratulations">Congatulations, keep going!</string>
    <string name="task_removed">Your task has been removed</string>
    <string name="update_article">Update article</string>
    <string name="no">no</string>
    <string name="update">update</string>
    <string name="updated_article">you have updated the Article</string>
    <string name="updated_task_title">Update your task</string>
    <string name="no_updated_article">you have not updated the Article</string>
    <string name="next">Next</string>
    <string name="info_about_the_app">Info about the App</string>
    <string name="read_articles">Read Articles</string>
    <string name="indexed_cards">Indexed Cards</string>
    <string name="do_a_test">Do a Test</string>
    <string name="control_your_progress">Control your progress</string>
    <string name="created_article">you created article</string>
    <string name="share_result">I want to share with you my Android test result which is:</string>
    <string name="task">Tasks</string>
    <string name="article">Article</string>
    <string name="articles">Articles</string>
    <string name="indexed_card">Indexed cards</string>
    <string name="about">About app</string>
    <string name="main_page">Main page</string>
    <string name="welcome">Welcome</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="make_a_picture">Make a picture</string>
    <string name="text_plain">text/plain</string>
    <string name="percentage">%</string>
    <string name="tasks_table">tasks_table</string>
    <string name="tasks_database">tasks_database</string>
    <string name="status">status</string>
    <string name="authority">olga.pietrzyk.androidteacher.fileprovider</string>
    <string name="JPEG">JPEG_</string>
    <string name="image">image/*</string>
    <string name="jpg">.jpg</string>
    <string name="yyyyMMdd_HHmmss">yyyyMMdd_HHmmss</string>
    <string name="gallery">gallery</string>
    <string name="null_value">Null</string>
    <string name="image_bug">Capture Image Bug: </string>
    <string name="request_error">Request cancelled or something went wrong.</string>
    <string name="sucesful_upload">file uploaded to Firebase</string>
    <string name="fail_upload">file upload failed</string>
    <string name="upload_progress">upload progress</string>
    <string name="upload_info">Upload information</string>
    <string name="cannot_be_null">Activity cannot be null</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="unsucesfully_signed_in">Unsuccessful sign in</string>
    <string name="sucesfully_signed_in">Successfully signed in user </string>
    <string name="articles_list">Articles list:</string>
    <string name="add_article_text">to add your articles login -></string>
    <string name="not_sucesfull_db">fail to save file in Database</string>
    <string name="sucesfull_db">save file in Database succesfully</string>
    <string name="camera">CAMERA</string>
    <string name="camera_header">Camera and photos</string>
    <string name="upload">upload</string>
    <string name="android_teacher">Android Teacher</string>
    <string name="share">Share</string>
    <string name="share_your_photo_text">Share your photo with the others</string>
    <string name="all_users_text">All users pictures:</string>

    <string name="definition1">Geotagging</string>
    <string name="definition2">Kindle</string>
    <string name="definition3">Launcher</string>
    <string name="description1">Where in in your phone finds your location via GPS and attaches coordinates to pictures you are taking. Can be a privacy/security concern.</string>
    <string name="description2">Amazons popular tablets and e Readers. Also an app for Android.</string>
    <string name="description3">Collectively, the part of the Android user interface on home screens that lets you launch apps, make phone calls, etc. Is built in to Android, or can be purchased in the Android Market</string>


    <string name="question1">What is the not a function of life cycle of android activity?</string>
    <string name="question2">Where you inflate your menu</string>
    <string name="question3">Where UI Fragments contain a layout and occupy a place within?</string>
    <string name="question4">What id the most current version of Android</string>

    <string name="answer1a">onRecreate()</string>
    <string name="answer1b">onStart()</string>
    <string name="answer1c">onResume()</string>
    <string name="answer1d">onCreate()</string>

    <string name="answer2a">onCreateOptions</string>
    <string name="answer2b">onOptionItemSelected</string>
    <string name="answer2c">setHasOptionMenu</string>
    <string name="answer2d">onInflateMenu</string>

    <string name="answer3a">in the Activity Layout</string>
    <string name="answer3b">in onContextView</string>
    <string name="answer3c">in context</string>
    <string name="answer3d">in onCreate method</string>

    <string name="answer4a">Android Pie</string>
    <string name="answer4b">Android Oreo</string>
    <string name="answer4c">Android Nougat</string>
    <string name="answer4d">Android Marshmallow</string>

</resources>