<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="taskViewModel"
            type="olga.pietrzyk.androidteacher.tasks.TaskViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/task_title"
                android:text="@string/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/fragment_task_title" />
            <TextView
                android:id="@+id/task_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_tasks"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/task_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/task_description"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                style="@style/fragment_task_decription" />
            <Button
                android:id="@+id/start_button"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_description"
                style="@style/fragment_task_start_button" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_list"
                app:layout_constraintBottom_toTopOf="@+id/clear_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_button"
                style="@style/fragment_task_list" />
            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="540dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> taskViewModel.deleteAllTasks()}"
                android:text="@string/delete_all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.532"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>